set(DDATABASE_CDCLIENTDATABASE_SOURCES
#header
	"CDClientDatabase.h"
	"CDClientManager.h"

#source
	"CDClientDatabase.cpp"
	"CDClientManager.cpp"
)

add_subdirectory(CDClientTables)

foreach(file ${DDATABASE_CDCLIENTDATABASE_CDCLIENTTABLES_SOURCES})
	set(DDATABASE_CDCLIENTDATABASE_SOURCES ${DDATABASE_CDCLIENTDATABASE_SOURCES} "CDClientTables/${file}")
endforeach()

set(DDATABASE_CDCLIENTDATABASE_SOURCES ${DDATABASE_CDCLIENTDATABASE_SOURCES} PARENT_SCOPE)
